[gd_scene load_steps=5 format=3 uid="uid://mhtvak4c2lgp"]

[ext_resource type="Script" uid="uid://3pbi3wvm86a7" path="res://scripts/start_menu/pause.gd" id="1_y6ok1"]
[ext_resource type="Theme" uid="uid://2ek7eagjo7f0" path="res://resources/themes/general_theme.tres" id="4_c34ew"]
[ext_resource type="PackedScene" uid="uid://bp7pspq4knti5" path="res://scenes/start_menu/options_menu.tscn" id="5_2w6d3"]
[ext_resource type="PackedScene" uid="uid://2i316e7renfb" path="res://scenes/start_menu/how_to_play.tscn" id="6_kqkiy"]

[node name="pause" type="Control" node_paths=PackedStringArray("options_menu", "how_to_play_menu", "resume_button", "options_button", "how_to_play_button")]
process_mode = 3
z_index = 10
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 900.0
offset_bottom = 600.0
script = ExtResource("1_y6ok1")
options_menu = NodePath("options_menu")
how_to_play_menu = NodePath("how_to_play")
resume_button = NodePath("VBoxContainer/resume_button")
options_button = NodePath("VBoxContainer/options_button")
how_to_play_button = NodePath("VBoxContainer/resume_button")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -257.0
offset_right = 108.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_c34ew")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -258.0
offset_right = 154.5
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Paused_Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_c34ew")
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="blank" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="how_to_play_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_c34ew")
text = "HOW TO PLAY"

[node name="options_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_c34ew")
text = "SETTINGS"

[node name="main_menu_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_c34ew")
text = "MAIN MENU"

[node name="blank2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="resume_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("4_c34ew")
text = "RESUME"

[node name="options_menu" parent="." instance=ExtResource("5_2w6d3")]
visible = false
layout_mode = 1
offset_top = 1.0
offset_bottom = 1.0

[node name="how_to_play" parent="." instance=ExtResource("6_kqkiy")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/how_to_play_button" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
